--- a/miniprogram/pages/user/create-order/create-order.wxss
+++ b/miniprogram/pages/user/create-order/create-order.wxss
@@ -222,12 +222,14 @@
 
 .form-input {
   width: 100%;
+  min-height: 88rpx;
   padding: 24rpx 20rpx;
   border: 2rpx solid #e0e0e0;
   border-radius: 12rpx;
   font-size: 28rpx;
   background: #fafafa;
   transition: all 0.3s ease;
+  box-sizing: border-box;
 }
 
 .form-input:focus {
@@ -238,13 +240,15 @@
 
 .form-textarea {
   width: 100%;
-  min-height: 120rpx;
+  min-height: 160rpx;
   padding: 24rpx 20rpx;
   border: 2rpx solid #e0e0e0;
   border-radius: 12rpx;
   font-size: 28rpx;
+  line-height: 1.6;
   background: #fafafa;
   transition: all 0.3s ease;
+  box-sizing: border-box;
 }
 
 .form-textarea:focus {
